# promptpaste

./: LICENSE  README.md  initial_design.md  pp.py  pyproject.toml  test_p.md
promptpaste/: __init__.py
scripts/: install_pp.ps1  install_pp.sh
skills/promptpaste/: COMMANDS.md  SKILL.md
tests/: test_pp.py
