[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[project]
name = "promptpaste"
version = "0.2.0"
description = "Store and reuse prompts and instructions via a tiny CLI."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "lirrensi" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
pp = "promptpaste:main"

[tool.setuptools]
packages = ["promptpaste"]
